--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
+    "mini-css-extract-plugin": "^0.8.0",
     "next": "^9.0.7",
     "next-redux-wrapper": "^4.0.0",
     "react": "^16.10.1",
